[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img/play/tips.png" type="Texture" id=1]
[ext_resource path="res://Font48.tres" type="DynamicFont" id=2]
[ext_resource path="res://FontManga38.tres" type="DynamicFont" id=3]
[ext_resource path="res://Tips.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/zombiecontrol.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/img/play/hud/close.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 86
font_data = ExtResource( 5 )

[node name="Tips" type="TextureRect"]
texture = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 246.0
margin_top = 367.0
margin_right = 1030.0
margin_bottom = 422.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.501961, 0, 0, 1 )
text = "TIPS"
align = 1

[node name="Text1" type="Label" parent="."]
margin_left = 248.0
margin_top = 442.0
margin_right = 1023.0
margin_bottom = 716.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Button" parent="."]
margin_left = 999.595
margin_top = 312.235
margin_right = 1139.6
margin_bottom = 446.235
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.501961, 0, 0, 1 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconContainer" type="CenterContainer" parent="."]
margin_left = 243.0
margin_top = 597.0
margin_right = 1038.0
margin_bottom = 716.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="IconContainer"]
margin_left = 397.0
margin_top = 59.0
margin_right = 397.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Ok" to="." method="_on_Ok_pressed"]
